<resources>
    <string name="app_name">Terbangin</string>
    <string name="title_tab_home">Beranda</string>
    <string name="title_tab_history">Riwayat</string>
    <string name="title_tab_notification">Notifikasi</string>
    <string name="title_tab_profile">Akun</string>
    <string name="btn_save_filter_list">Pilih\n</string>
    <string name="price_filter">Harga</string>
    <string name="list_filter_1">Termurah</string>
    <string name="list_filter_2">Paling Awal</string>
    <string name="departure_filter">" Keberangkatan"</string>
    <string name="departure_filter_2">Keberangkatan</string>
    <string name="list_filer_3">Paling Akhir</string>
    <string name="arrival_filter">Kedatangan</string>
    <string name="arrival_filter_2">Kedatangan</string>
    <string name="list_filter_4">Paling Awal</string>
    <string name="list_filter_5">Paling Akhir</string>
    <string name="txt_title_order_biodata">Biodata Pemesanan</string>
    <string name="txt_title_order_biodata_2">Data Diri Pemesanan</string>
    <string name="txt_full_name">Nama Lengkap:</string>
    <string name="txt_input_full_name">Masukkan nama lengkap Anda</string>
    <string name="txt_family_name">Punya Nama Keluarga?</string>
    <string name="txt_family_name_2">Nama Keluarga:</string>
    <string name="txt_input_name_family">Masukkan nama keluarga Anda</string>
    <string name="txt_phone_number">Nomor Telepon:</string>
    <string name="txt_input_phone_number">Masukkan nomor telepon Anda</string>
    <string name="txt_email">Email:</string>
    <string name="txt_input_email">Masukkan alamat email Anda</string>
    <string name="btn_save">Simpan</string>
    <string name="txt_class_title">Class Title</string>
    <string name="txt_price_class">IDR 0.000.000,00</string>
    <string name="txt_title_notificaton">Notifkasi / Promo</string>
    <string name="txt_notification">terdapat perubahan jadwal pesawat</string>
    <string name="txt_date_notification">20/05/2024,17.00</string>
    <string name="txt_title_notification_fragment">Notifikasi</string>
    <string name="txt_greeting_one">Halo!</string>
    <string name="txt_greeting_two">Selamat Datang di TerbangIn!</string>
    <string name="txt_desc_next_button">next_button</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_email_nomor_telepon">Email / Nomor Telepon</string>
    <string name="placeholder_input_name">John Doe</string>
    <string name="placeholder_hint_input_email">johdoe@gmail.com</string>
    <string name="text_password">Password</string>
    <string name="text_masukkan_password">Masukkan Password</string>
    <string name="text_lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="text_belum_punya_akun_daftar_di_sini">Belum punya Akun? Daftar di sini</string>
    <string name="text_daftar_di_sini">Daftar di sini</string>
    <string name="text_daftar">Daftar</string>
    <string name="text_nama">Nama</string>
    <string name="text_masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="text_email">Email</string>
    <string name="text_format_id_phoneNumber">+62</string>
    <string name="text_nomor_telepon">Nomor Telepon</string>
    <string name="text_masukkan_nomor_telepon">Masukkan Nomor Telepon Anda</string>
    <string name="text_buat_password">Buat Password</string>
    <string name="text_sudah_punya_akun_masuk_di_sini">Sudah punya akun? Masuk di sini</string>
    <string name="text_back_button_for_previous_page">Back button for previous page</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_masukkan_password_baru">Masukkan Password Baru</string>
    <string name="text_ulangi_password_baru">Ulangi Password Baru</string>
    <string name="text_simpan">Simpan</string>
    <string name="text_ulangi_masukkan_password_baru">Ulangi Masukkan Password Baru</string>
    <string name="text_home_tittle">Hai, Mau Kemana?</string>
    <string name="text_flight_to">Tujuan</string>
    <string name="text_flight_from">Dari</string>
    <string name="text_selector_round_trip">Pulang - Pergi ?</string>
    <string name="text_search_flight">Cari Penerbangan</string>
    <string name="title_otp_page">Masukkan OTP</string>
    <string name="placeholder_ketik_6_digit">Ketik 6 digit kode yang dikirimkan ke email anda</string>
    <string name="btn_resend_otp">Kirim Ulang OTP Dalam 60 Detik</string>
    <string name="btn_request_new_code">Minta kode baru via SMS</string>
    <string name="text_title_home_fav">Rekomendasi Penerbangan</string>
    <string name="text_title_arrow_home_item"><![CDATA[->]]></string>
    <string name="text_price_start_item_home">Mulai dari</string>
    <string name="text_seat_class">Kelas</string>
    <string name="text_return">Kepulangan</string>
    <string name="text_passengers">Penumpang</string>
    <string name="text_departure">Keberangkatan</string>
    <string name="text_select_date">Pilih Tanggal</string>
    <string name="text_select_seat_class">Pilih Kelas</string>
    <string name="text_select_passengers">Pilih Penumpang</string>
    <string name="text_select_flight_from">Pilih Lokasi Awal</string>
    <string name="text_select_flight_to">Pilih Tujuan</string>
    <string name="text_enter_without_login">Lanjutkan sebagai pengunjung</string>
    <string name="text_button_register_now">Daftar Sekarang</string>
    <string name="maaf_anda_harus_login_terlebih_dahulu">Maaf, Anda harus login terlebih dahulu!</string>
    <string name="title_edit_profile">Ubah Profil</string>
    <string name="menu_edit_profile">Ubah Profil</string>
    <string name="menu_profile_settings">Pengaturan Akun</string>
    <string name="app_version">Version 1.1.0</string>
    <string name="menu_logout_profile">Keluar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_recent_search">Pencarian Terkini</string>
    <string name="text_delete">Hapus</string>
    <string name="text_search_terminal_hint">Masukkan Kota atau Negara</string>
    <string name="text_title_passengers_count">Pilih Jumlah Penumpang</string>
    <string name="text_passenger_adult">Dewasa</string>
    <string name="text_description_adult">(12 tahun keatas)</string>
    <string name="text_description_children">(2 – 11 tahun)</string>
    <string name="text_passenger_children">Anak-anak</string>
    <string name="text_passenger_baby">Bayi</string>
    <string name="text_description_baby">(Di bawah 2 tahun)</string>
    <string name="text_save">Simpan</string>
    <string name="text_error_email_empty">Email tidak boleh kosong</string>
    <string name="text_error_email_invalid">Email tidak valid</string>
    <string name="text_error_pw_empty">Password tidak boleh kosong</string>
    <string name="text_error_pw_lower">Password harus berisi 8 karakter atau lebih</string>
    <string name="text_error_name_empty">Nama tidak boleh kosong</string>
    <string name="text_error_number_empty">Nomor Telepon tidak boleh kosong</string>
    <string name="text_error_number_invalid">Nomor Telepon tidak valid</string>
    <string name="text_close">Tutup</string>
    <string name="text_dialog_reset_password">Link untuk mereset password dan membuat password baru telah dikirimkan ke email anda</string>
    <string name="placeholder_appbar_title">AppBar Title</string>
    <string name="text_pilih">Pilih</string>
    <string name="text_lanjut_pembayaran">Lanjut Pembayaran</string>
    <string name="appbar_title_rincian_penerbangan">Rincian Penerbangan</string>
    <string name="text_riwayat_pesanan">Riwayat Pesanan</string>
    <string name="text_button_search">Button Search</string>
    <string name="text_button_filter">Button Filter</string>
    <string name="text_booking_code">Kode Booking:</string>
    <string name="text_class">Kelas:</string>
    <string name="text_logo_maps_departure">Logo Maps Departure</string>
    <string name="text_logo_maps_landing">Logo Maps Landing</string>
    <string name="text_arrows_showing_departure_location_and_flight_time">arrows showing departure location and flight time</string>
    <string name="text_start_date">Start Date</string>
    <string name="text_end_date">End Date</string>
    <string name="text_hapus">Hapus</string>
    <string name="text_calender_title_view">Calender View Filter</string>
    <string name="text_mulai_dari">Mulai Dari</string>
    <string name="text_sampai">Sampai</string>
    <string name="text_pilih_tanggal_mulai">Pilih Tanggal Mulai</string>
    <string name="text_pilih_tanggal_sampai">Pilih Tanggal Sampai</string>
    <string name="text_filter_riwayat_pesanan">Filter Riwayat Pesanan</string>
    <string name="text_masukkan_nomor_penerbangan">Masukkan Kode Booking</string>
    <string name="text_input_email">Masukkan Email</string>
    <string name="text_error_number_invalid2">Hapus 0 diawal nomor</string>
    <string name="title_tab_pengaturan_akun">Pengaturan Akun</string>
    <string name="menu_pengaturan_akun_tema_gelap">Tema Gelap</string>
    <string name="menu_pengaturan_akun_hapus_akun">Hapus Akun</string>
    <string name="text_title_seat_class_select">Pilih Kelas Kursi Penumpang</string>
    <string name="text_cari_riwayat_pesanan">Cari Riwayat Pesanan</string>
    <string name="text_filter">Filter</string>
    <string name="text_send">Kirim</string>
    <string name="text_input_your_email">Masukkan Email Anda</string>
    <string name="text_restart_otp">Kirim Ulang OTP Dalam %1$s Detik</string>
    <string name="text_pilih_tgl_keberangkatan">Pilih Tanggal Keberangkatan</string>
    <string name="text_tanggal_berangkat">Tanggal Berangkat</string>
    <string name="text_pilih_tanggal_berangkat">Pilih Tanggal Berangkat</string>
    <string name="text_ubah_pencarian">Ubah Pencarian</string>
    <string name="text_dialog_logout">Apakah anda yakin ingin keluar?</string>
    <string name="text_pilih_tgl_kepulangan">Pilih Tanggal Kepulangan</string>
    <string name="text_tanggal_pulang">Tanggal Pulang</string>
    <string name="text_pilih_tanggal_kepulangan">Pilih Tanggal Kepulangan</string>
    <string name="placeholder_hint_input_phone_number">085877778888</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="text_dialog_delete_account">Apakah anda yakin ingin menghapus akun ini?</string>
    <string name="text_kembali">Kembali</string>
    <string name="text_direct">Direct</string>
    <string name="text_cheapest">Termurah</string>
    <string name="text_title">Title</string>
    <string name="text_pilih_title_anda">Pilih Title Anda</string>
    <string name="text_nama_lengkap">Nama Lengkap</string>
    <string name="text_punya_nama_keluarga">Punya Nama Keluarga?</string>
    <string name="text_nama_keluarga">Nama Keluarga</string>
    <string name="text_masukkan_nama_keluarga">Masukkan Nama Keluarga Anda</string>
    <string name="text_tanggal_lahir">Tanggal Lahir</string>
    <string name="text_dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="text_kewarganegaraan">Kewarganegaraan</string>
    <string name="text_isi_kewarganegaraan">Isi Kewarganegaraan</string>
    <string name="text_ktp_paspor">KTP/Paspor</string>
    <string name="text_masukkan_ktp_paspor">Masukkan KTP/Paspor</string>
    <string name="text_negara_penerbit">Negara Penerbit</string>
    <string name="text_isi_negara_penerbit">Isi Negara Penerbit</string>
    <string name="text_berlaku_sampai">Berlaku Sampai</string>
    <string name="text_binding_total_passenger">%1$s Penumpang</string>
    <string name="text_binding_airport_city">%1$s (%2$s)</string>
    <string name="text_binding_flight_search_title"><![CDATA[%1$s > %2$s - %3$s Penumpang - %4$s]]></string>
    <string name="text_arrival">Kedatangan</string>
    <string name="text_information">Informasi:</string>
    <string name="binding_flight_destination_detail"><![CDATA[%1$s -> %2$s]]></string>
    <string name="binding_airport_origin_detail">%1$s - %2$s</string>
</resources>