<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.reset_password.ResetPasswordActivity">

    <ImageButton
        android:id="@+id/ib_btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/md_theme_onBackground"
        android:contentDescription="@string/text_back_button_for_previous_page"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_title_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_reset_password"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_til_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textSize="14sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_reset_password"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_til_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_your_email"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/fl_btn_loading_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/text_send"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/bg_rounded_white"
            android:backgroundTint="@color/md_theme_inversePrimary"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>