<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/md_theme_background"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <TextView
            android:id="@+id/tv_dialog_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dialog_logout"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_logout"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/menu_logout_profile"
            android:textSize="16sp"
            android:backgroundTint="@color/md_theme_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/text_close"
            android:textSize="16sp"
            android:textColor="@color/md_theme_primary"
            android:backgroundTint="@color/md_theme_secondaryContainer"
            app:layout_constraintStart_toEndOf="@id/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>