<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="48dp">

        <TextView
            android:id="@+id/tv_title_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_daftar"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_til_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama"
            android:textSize="14sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_daftar"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_til_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_masukkan_nama_lengkap"
                android:textSize="16sp"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_til_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            android:textSize="14sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/til_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_til_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_contoh_johdoe_gmail_com_in_login"
                android:textSize="16sp"
                android:inputType="text"
                android:digits="0123456789@abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ._-+() "/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_til_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nomor_telepon"
            android:textSize="14sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:prefixText="+62  "
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_til_phoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_masukkan_nomor_telepon"
                android:textSize="16sp"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_til_make_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="14sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/til_phoneNumber"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_make_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_til_make_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_et_make_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_buat_password"
                android:textSize="16sp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/fl_btn_loading_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/til_make_password">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/text_daftar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/md_theme_inversePrimary"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pb_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_nav_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_sudah_punya_akun_masuk_di_sini"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@id/fl_btn_loading_state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>